# jobs-search-system

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
config/: profile.yaml.example  settings.yaml
docs/: ARCHITECTURE.md  PRD.md  lessons-applied.md  previous-lessons.md
docs/research/: requirements-section-discovery.md
scripts/: benchmark_llm_scoring.py  diagnose_description.py  extract_cookies.py
src/browser/: actions.py  session.py
src/core/: config.py  db.py  schemas.py
src/pipeline/: __init__.py  llm_scorer.py  matcher.py  orchestrator.py  quota_manager.py  scorer.py
src/profile/: __init__.py  extractor.py  generator.py  llm_analyzer.py  schema.py
src/profile/llm/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
tasks/: plan-m10.md  todo.md
tests/fixtures/: linkedin_results_page.html  sample_llm_response.json
tests/integration/: test_search_pipeline.py
tests/unit/: test_actions.py  test_config.py  test_db.py  test_description_fetch.py  test_llm_analyzer.py  test_llm_providers.py  test_llm_scorer.py  test_matcher.py  test_parser.py  test_profile_extractor.py  test_profile_generator.py  test_profile_schema.py  test_quota_manager.py  test_schemas.py  test_scorer.py  test_session.py  test_url_builder.py
